ajustes na versão PDF e incorporando sugestões de #1

--- a/inst/book/assets/tex/extras/imeusp-thesis.tex
+++ b/inst/book/assets/tex/extras/imeusp-thesis.tex
@@ -450,18 +450,18 @@
 % Defaults quando o usuário não define alguma dessas variáveis.
 % Não podemos usar \title ou \author aqui porque esses comandos
 % dependem de hyperref, que ainda não foi carregada.
-\providecommand\@author{Autor não definido!}
-\orientador{Orientador não definido!}
-\DTMsavedate{@defensedate}{1970-01-01}
-\providecommand\@program{Programa não definido!}
+\providecommand\@author{Julio Adolfo Zucon Trecenti}
+\orientador{Victor Fossaluza}
+\DTMsavedate{@defensedate}{2023-01-05}
+\providecommand\@program{Estatística}
 \providecommand\@financing{}
-\providecommand\@defenselocation{Local não definido!}
-\providecommand\@license{Direitos não definidos!}
-\providecommand\@title{Título não definido!}
-\providecommand\@titlept{Título em português não definido!}
-\providecommand\@titleen{Título em inglês não definido!}
-\providecommand\@resumo{Resumo não definido!}
-\providecommand\@abstract{Abstract não definido!}
+\providecommand\@defenselocation{São Paulo}
+\providecommand\@license{CC-BY 4.0}
+\providecommand\@title{Resolvendo Captchas}
+\providecommand\@titlept{Resolvendo Captchas}
+\providecommand\@titleen{Solving Captchas}
+\providecommand\@resumo{Resumo}
+\providecommand\@abstract{Resumo}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
