--- a/inst/book/assets/tex/extras/languages.tex
+++ b/inst/book/assets/tex/extras/languages.tex
@@ -168,7 +168,7 @@
 % necessário trocar os "captions", \captionslíngua (ou seja, os comandos
 % acima modificam \captionslíngua). Então, se você quiser executar algo a
 % mais quando uma língua é selecionada, faça \addto\extrasenglish{\blah}.
-\usepackage{babel}
+\usepackage[brazilian]{babel}
 \usepackage{iflang}
 
 % Por padrão, LaTeX utiliza maiúsculas no início de cada palavra nestas
