--- a/inst/book/assets/tex/extras/utils.tex
+++ b/inst/book/assets/tex/extras/utils.tex
@@ -59,9 +59,9 @@
 \def\appendixtocname{\@IMErealAppendixtocname}
 \def\appendixpagename{\@IMErealAppendixpagename}
 
-\providecommand\annexname{Annex}
-\providecommand\annextocname{Annexes}
-\providecommand\annexpagename{Annexes}
+\providecommand\annexname{Anexo}
+\providecommand\annextocname{Anexos}
+\providecommand\annexpagename{Anexos}
 
 % \addto\captionsbrazil{%
 %   \renewcommand\annexname{Anexo}%
@@ -72,15 +72,16 @@
 %   \renewcommand\@IMErealAppendixpagename{Apêndices}%
 % }
 %
-% \addto\captionsbrazilian{%
-%   \renewcommand\annexname{Anexo}%
-%   \renewcommand\annextocname{Anexos}%
-%   \renewcommand\annexpagename{Anexos}%
-%   \renewcommand\@IMErealAppendixname{Apêndice}%
-%   \renewcommand\@IMErealAppendixtocname{Apêndices}%
-%   \renewcommand\@IMErealAppendixpagename{Apêndices}%
-% }
-%
+
+\addto\captionsbrazilian{%
+  \renewcommand\annexname{Anexo}%
+  \renewcommand\annextocname{Anexos}%
+  \renewcommand\annexpagename{Anexos}%
+  \renewcommand\@IMErealAppendixname{Apêndice}%
+  \renewcommand\@IMErealAppendixtocname{Apêndices}%
+  \renewcommand\@IMErealAppendixpagename{Apêndices}%
+}
+
 % \addto\captionsenglish{%
 %   \renewcommand\annexname{Annex}%
 %   \renewcommand\annextocname{Annexes}%
